--- a/citrus-remote-maven-plugin/pom.xml
+++ b/citrus-remote-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <artifactId>citrus-remote</artifactId>
-    <groupId>org.citrusframework</groupId>
+    <groupId>com.consol.citrus</groupId>
     <version>3.5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
@@ -16,14 +16,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.citrusframework</groupId>
+      <groupId>com.consol.citrus</groupId>
       <artifactId>citrus-remote-server</artifactId>
       <version>${project.version}</version>
     </dependency>
 
     <!-- Citrus -->
     <dependency>
-      <groupId>org.citrusframework</groupId>
+      <groupId>com.consol.citrus</groupId>
       <artifactId>citrus-base</artifactId>
     </dependency>
 
