Increase citrus version to most compatible one

--- a/citrus-remote-maven-plugin/pom.xml
+++ b/citrus-remote-maven-plugin/pom.xml
@@ -23,7 +23,7 @@
 
     <!-- Citrus -->
     <dependency>
-      <groupId>com.consol.citrus</groupId>
+      <groupId>org.citrusframework</groupId>
       <artifactId>citrus-base</artifactId>
     </dependency>
 
