--- a/citrus-remote-server/pom.xml
+++ b/citrus-remote-server/pom.xml
@@ -34,11 +34,11 @@
 
     <!-- Citrus -->
     <dependency>
-      <groupId>com.consol.citrus</groupId>
+      <groupId>org.citrusframework</groupId>
       <artifactId>citrus-base</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.consol.citrus</groupId>
+      <groupId>org.citrusframework</groupId>
       <artifactId>citrus-main</artifactId>
     </dependency>
   </dependencies>
