--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <maven.wagon.ssh.external.version>2.7</maven.wagon.ssh.external.version>
     <apache.rat.plugin.version>0.13</apache.rat.plugin.version>
 
-    <citrus.version>3.4.0</citrus.version>
+    <citrus.version>4.0.2</citrus.version>
     <commons.logging.api.version>1.1</commons.logging.api.version>
     <commons.logging.version>1.2</commons.logging.version>
     <httpclient.version>4.5.14</httpclient.version>
@@ -110,12 +110,12 @@
     <dependencies>
       <!-- Citrus -->
       <dependency>
-        <groupId>com.consol.citrus</groupId>
+        <groupId>org.citrusframework</groupId>
         <artifactId>citrus-base</artifactId>
         <version>${citrus.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.consol.citrus</groupId>
+        <groupId>org.citrusframework</groupId>
         <artifactId>citrus-main</artifactId>
         <version>${citrus.version}</version>
       </dependency>
